<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_centerVertical="true"
              android:background="@drawable/list_confirmation_stroke"
              android:id="@+id/layout_confirmation">


    <!--<include layout="@layout/toolbar"-->
             <!--android:id="@+id/toolbar"/>-->

    <TextView
        android:id="@+id/tv_confirmation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/immigrat_title"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"

        android:padding="5dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/tv_confirmation_family_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/family_name"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/tv_confirmation_title"/>
    <TextView
        android:id="@+id/tv_confirmation_family_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_immigrant_list_title"
        android:paddingEnd="10dp"
        android:text="fam dfgdgdfgdgdfgdname"
        android:layout_below="@id/tv_confirmation_title"
        android:layout_toEndOf="@id/tv_confirmation_family_name_title"/>

    <TextView
        android:id="@+id/tv_confirmation_last_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/last_name"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/tv_confirmation_family_name_title"/>
    <TextView
        android:id="@+id/tv_confirmation_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:layout_below="@id/tv_confirmation_family_name_title"
        android:layout_toEndOf="@id/tv_confirmation_last_name_title"/>

    <TextView
        android:id="@+id/tv_confirmation_image_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/image_path"
        android:layout_below="@id/tv_confirmation_last_name_title"/>
    <TextView
        android:id="@+id/tv_confirmation_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tv_confirmation_image_title"
        android:layout_below="@id/tv_confirmation_last_name_title"/>

    <TextView
        android:id="@+id/tv_confirmation_date_of_birth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/dob"
        android:layout_below="@id/tv_confirmation_image_title"/>
    <TextView
        android:id="@+id/tv_confirmation_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:layout_toEndOf="@id/tv_confirmation_date_of_birth_title"
        android:layout_below="@id/tv_confirmation_image_title"/>

    <TextView
        android:id="@+id/tv_confirmation_gender_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/gender"
        android:layout_below="@id/tv_confirmation_date_of_birth_title"/>
    <TextView
        android:id="@+id/tv_confirmation_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:layout_below="@id/tv_confirmation_date_of_birth_title"
        android:layout_toEndOf="@id/tv_confirmation_gender_title"/>

    <TextView
        android:id="@+id/tv_confirmation_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/country"
        android:layout_below="@id/tv_confirmation_gender_title"/>
    <TextView
        android:id="@+id/tv_confirmation_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:layout_below="@id/tv_confirmation_gender_title"
        android:layout_toEndOf="@id/tv_confirmation_country_title"/>

    <TextView
        android:id="@+id/tv_confirmation_address_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/address"
        android:layout_below="@id/tv_confirmation_country_title"/>
    <TextView
        android:id="@+id/tv_confirmation_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:maxLines="2"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/tv_confirmation_country_title"
        android:layout_toEndOf="@id/tv_confirmation_address_title"/>

    <TextView
        android:id="@+id/tv_confirmation_mail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/email"
        android:layout_below="@id/tv_confirmation_address"/>
    <TextView
        android:id="@+id/tv_confirmation_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:layout_toEndOf="@id/tv_confirmation_mail_title"
        android:layout_below="@id/tv_confirmation_address"/>

    <TextView
        android:id="@+id/tv_confirmation_phone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/phone"
        android:layout_below="@id/tv_confirmation_mail_title"/>
    <TextView
        android:id="@+id/tv_confirmation_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_confirmation_mail_title"
        android:layout_toEndOf="@id/tv_confirmation_phone_title"/>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:weightSum="1">
        <Button
            android:id="@+id/btn_confirmation_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:visibility="invisible"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btn_confirmation_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:visibility="invisible"
            android:text="@string/save"/>
    </LinearLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab_confirmation"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_marginBottom="50dp"-->
        <!--android:layout_marginEnd="20dp"-->
        <!--android:src="@android:drawable/ic_menu_save"/>-->

</RelativeLayout>